server.js updated
