# routes/contacts.js
@@ -1,18 +1,21 @@
 const express = require("express");
 const router = express.Router();
-
 const contactsController = require("../controllers/contacts");
-const validation = require("../middleware/validation");
+const { saveContact } = require("../middleware/validation");
 
+// GET all contacts
 router.get("/", contactsController.getAll);
 
+// GET one contact
 router.get("/:id", contactsController.getSingle);
 
-// validation.saveContact will check fields (see your middleware)
-router.post("/", validation.saveContact, contactsController.createContact);
+// CREATE new contact
+router.post("/", saveContact, contactsController.createContact);
 
-router.put("/:id", validation.saveContact, contactsController.updateContact);
+// UPDATE a contact
+router.put("/:id", saveContact, contactsController.updateContact);
 
+// DELETE a contact
 router.delete("/:id", contactsController.deleteContact);
 
 module.exports = router;
